assets/css/style.css
/* GLOBAL SELECTORS */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* VARIABLES */
:root {
    --secondary-font: 'Saira';
    --main-font: 'Saira Condensed';

    --color-one: #19171A;
    --color-two: #9615DB;
    --color-three: #D6D6D6;
    --color-four: #555759;
    --color-five: #66FCF1;
}

/* HTML */
html {
    scroll-behavior: smooth;
}

/* BODY */
body {
    font-family: var(--main-font);
    width: 100%;
    height: 100%;
    background-color: var(--color-one);
    color: var(--color-three);
    overflow-x: hidden;
}

/* NAVBAR */
nav {
    background: var(--color-one);
    height: 8rem;
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1000;
}

label.logo {
    font-family: var(--main-font);
    font-size: 3rem;
    line-height: 8rem;
    padding: 0 3rem;
    font-weight: bold;
}

label.logo a {
    color: var(--color-three);
    text-decoration: none;
}

nav ul {
    float: right;
    margin-right: 2rem;
}

nav ul li {
    display: inline-block;
    line-height: 8rem;
    margin-right: 1rem;
}

nav ul li a {
    text-decoration: none;
    list-style: none;
    color: var(--color-three);
    font-size: 1.5rem;
    text-transform: uppercase;
    padding: .1rem 1rem;
    border-radius: 3px;
}

a.active,a:hover {
    /* background: var(--color-two); */
    color: var(--color-two);
    transition: .4s;
}

.checkbtn {
    font-size: 2rem;
    color: var(--color-three);
    float: right;
    line-height: 8rem;
    margin-right: 2rem;
    cursor: pointer;
    display: none;
}

#check {
    display: none;
}

@media (max-width: 952px) {
    label.logo {
        font-size: 2.5rem;
        padding-left: 2rem;
    }
    nav ul li a {
        font-size: 1.2rem;
    }
}

@media (max-width: 858px) {
    .checkbtn {
        display: block;
    }
    ul {
        position: fixed;
        width: 100%;
        height: 100vh;
        background: var(--color-one);
        top: 8rem;
        left: -100%;
        text-align: center;
        transition: all .5s;
        margin: 0 auto;
    }
    nav ul li {
        display: block;
        line-height: 2rem;
        margin: 4rem;
    }
    nav ul li a {
        font-size: 2rem;
    }
    a:hover,a.active {
        background: none;
        color: var(--color-two);
    }
    #check:checked ~ ul {
        left: 0;
    }
}

/* HOME PAGE */
.home-container {
    margin-top: 8rem;
    width: 100%;
    height: 70vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.keyframes {
    display: flex;
    justify-content: center;
    align-items: center;
}

/* .static {
    color: black;
    font-size: 3rem;
    font-weight: bold;
} */

.dynamic {
     margin-left: -20px;
     line-height: 90px;
     height: 90px;
     overflow: hidden;
}

.dynamic li {
    color: var(--color-two);
    list-style: none;
    font-size: 3rem;
    font-weight: bolder;
    position: relative;
    top: 0;
    animation: slide 6s steps(4) infinite;
}

@keyframes slide {
    100% {
        top: -360px;
    }
}

.dynamic li span {
    position: relative;
}

.dynamic li span::after {
    content: '';
    left: 0;
    position: absolute;
    height: 100%;
    width: 100%;
    background: var(--color-one);
    border-left: 2px solid var(--color-two);
    animation: typing 1.5s steps(12) infinite;
}

@keyframes typing {
    100% {
        left: 100%;
        margin: 0 -35px 0 35px;
    }
}

/* HOME IMAGE CONTAINER */
.home-image-container {
    width: 10rem;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* HOME IMAGE */
.home-image-container img {
    border: 1px solid var(--color-two);
    border-radius: 50%;
    height: 10rem;
    width: 10rem;
    object-fit: cover;
    object-position: center;
}

/* HOME TEXT CONTAINER */
.home-text-container {
    /* margin-top: 7rem; */
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.welcome {
    font-size: 1rem;
    letter-spacing: .2rem;
    margin-top: .8rem;
}

.wave-emoji {
    font-size: 1.8rem;
}

.calvin-kim {
    font-size: 2.7rem;
    font-weight: bold;
    font-family: 'Courier New', Courier, monospace;
}

.web-dev {
    font-size: 1.8rem;
    letter-spacing: .2rem;
}

/* .full-stack-dev {
    color: white;
    font-size: 1rem;
    background-color: #0082e6;
    padding: .1rem .5rem;
    width: 10rem;
    text-align: center;
    margin-bottom: 1rem;
} */

.hire-me-btn {
    font-size: 1rem;
    letter-spacing: .2rem;
    font-weight: bold;
}

@media screen and (min-width: 768px) {
    .home-container {
        flex-direction: row;
    }
    .home-image-container {
        width: 50%;
        height: 100%;
        justify-content: flex-end;
        padding-right: .5rem;
    }
    .home-image-container img {
        height: 20rem;
        width: 20rem;
    }
    .home-text-container {
        width: 50%;
        height: 100%;
        align-items: flex-start;
        padding-left: .5rem;
    }
    .dynamic {
        margin-top: -4rem;
        margin-left: -2rem;
    }
}

/* @media screen and (min-width: 1440px) {
    .home-image-container img {
        height: 30rem;
        width: 30rem;
    }
    .welcome {
        font-size: 1.8rem;
        letter-spacing: .2rem;
    }    
    .wave-emoji {
        font-size: 2.6rem;
    }
    .calvin-kim {
        font-size: 6rem;
    }
    .web-dev {
        font-size: 2.5rem;
    }
    .full-stack-dev {
        font-size: 1.5rem;
        width: 15rem;
        margin-top: 1rem;
    }
    .hire-me-btn {
        font-size: 1rem;
        margin-top: 1rem;
    }
} */

/* ABOUT PAGE */
.about-header-container {
    margin-top: 8rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.about-header {
    /* border-bottom: 2px solid orange; */
    font-size: 2rem;
    font-weight: bold;
}
/* ... */

